test/expected/bogus_path_escaped.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "data/*/*"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "data/*/"
  Literal "*"
]
shit: 1:6: error: No matches for the glob pattern 'data/*/*'.
     1 |  echo data/*/\*
       |       ^~~~~~~~~ here.
